Add analysis module, position/tag injection, retry logic, dual Gemini tiers
- src/analysis.py: new module with load_results_to_dataframe() returning
  long-format pandas DataFrame (one row per product per experiment) for
  MNL estimation; includes summary() helper
- src/generator.py: add assign_positions() with random/price/rating modes;
  add inject_tags() with calibrated Sponsored/Best Seller/Overall Pick
  ranges; add validate_batch() pre-flight check
- src/agent_runner.py: add retry logic distinguishing per-minute rate limits
  (sleep + retry) from daily quota exhaustion (fail fast); add gemini-flash
  provider (gemini-1.5-flash, 1500 req/day free) alongside gemini
  (gemini-2.5-flash, 20/day) for tinkering vs production separation
- src/ingest_kaggle.py: tighten Wireless Headphones and Gaming Mice keywords
- spec.md: document position injection API, analysis DataFrame schema,
  updated product schema with position/page fields
- .gitignore: exclude old_results/, notebooks, LaTeX files
- data/results: add 13 Gemini experiment results with position/tag data
- data/experiments: regenerate all 6 category batches with positions and tags

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@ data/raw/
 *.csv.gz
 *.jsonl.gz
 
+# Jupyter notebooks (outputs contain raw product data; share stripped versions only)
+*.ipynb
+
+# Old experiment results (kept locally for reference, not tracked)
+data/results/old_results/
+
 # Research writing (not public until paper is ready)
 *.tex
 *.aux
